@@ -727,6 +727,8 @@ static const char *_asmCmd[] =
   "sdas8051", "$l", "$3", "\"$2\"", "\"$1.asm\"", NULL
 };
 
+static const char * const _libs[] = { STD_XA51_LIB, NULL, };
+
 /* Globals */
 PORT mcs51_port =
 {
@@ -756,6 +758,7 @@ PORT mcs51_port =
     ".rel",
     1,
     NULL,                       /* crt */
+    _libs,                      /* libs */
   },
   {                             /* Peephole optimizer */
     _defaultRules,
